--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
   </head>
   <body>
-      <a href="index.html"><img id="logo" src="images/icon.png" alt="logo image"></a>
-      <button onclick="location.href = 'login.html';" class ="btn">login/signup</button>
+      <button onclick="location.href = 'login.html';" class ="btn">login</button>
+      <button onclick="location.href = 'signup.html';" class ="btn">signup</button>
 	  <a href="https://github.com/AdamAddem/Small-Project" id="welcome" title="Link to github">Group 7 Contact Book</div> 
   </body>
 </html>
