--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="css/login.css" />
   <!-- <script type="text/javascript" src="js/code.js"></script>
   <script type="text/javascript" src="js/md5.js"></script> -->
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Island Moments' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
 </head>
 
 <body>
