--- a/signup.html
+++ b/signup.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group 7 Signup</title>
   <link rel="stylesheet" href="css/login.css" />
-  <!-- <script type="text/javascript" src="js/code.js"></script>
-  <script type="text/javascript" src="js/md5.js"></script> -->
+  <script type="text/javascript" src="js/code.js"></script>
+  <!-- <script type="text/javascript" src="js/md5.js"></script> -->
   <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
 </head>
