--- a/login.html
+++ b/login.html
@@ -7,24 +7,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group 7 Login</title>
-  <link rel="stylesheet" href="css/login.css" />
   <script type="text/javascript" src="js/code.js"></script>
-  <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
   <h1>Group 7 Contact Book Login</h1>
   <br /><br /><br /><br />
-  <div class="form" id="wholeForm">
-    <form id="login" class="input-form">
-      <input type="text" class="input-field" id="loginName" placeholder="username" name="username" required />
-        <!-- pattern="(?=.*[a-zA-Z])[a-zA-Z0-9-_]{3,18}$" /> -->
-      <input type="password" class="input-field" id="loginPassword" placeholder="password" name="password" required />
-        <!-- pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&*]).{8,32}" /> -->
-      <button type="button" id="loginButton" class="submit-btn" onclick="doLogin()">Login</button>
-      <span class="text" id="loginResult"></span>
-    </form>
+
+  <form id="login">
+    <div class="mb-3">
+      <label for="loginName" class="form-label">Username</label>
+      <input type="text" class="form-control" id="loginName" placeholder="username" name="login" aria-describedby="username" required>
+      <!-- <div id="username" class="form-text"></div> -->
     </div>
+    <div class="mb-3">
+      <label for="loginPassword" class="form-label">Password</label>
+      <input type="password" class="form-control" id="loginPassword" placeholder="password" name="password" required>
+    </div>
+    
+    <button type="button" class="btn btn-primary" onclick="doLogin()">Login</button>
+    <span class="text" style="color:rgb(203, 55, 21);" id="loginResult"></span>
+  </form>
+
 </body> 
 </html>
