add back button

--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <a href="index.html" class="btn btn-secondary" style="position: absolute; top: 20px; left: 20px;">Back</a>
   <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
     <!-- <h1>Group 7 Contact Book Login</h1> -->
 
@@ -27,7 +28,7 @@
         <input type="password" class="form-control" id="loginPassword" name="password" required>
       </div>
 
-      <button type="button" class="btn btn-primary" onclick="doLogin()">Login</button>
+      <button type="submit" class="btn btn-primary">Login</button>
       <span class="text" style="color:rgb(203, 55, 21);" id="loginResult"></span>
     </form>
   </div>
