--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <a href="index.html" class="btn btn-secondary" style="position: absolute; top: 20px; left: 20px;">Back</a>
   <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
     <!-- <h1>Group 7 Contact Book Signup</h1> -->
 
@@ -39,7 +40,7 @@
           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
         </div>
       </div>
-      <button type="button" class="btn btn-primary" onclick="doSignup()">Signup</button>
+      <button type="submit" class="btn btn-primary">Signup</button>
       <span class="text" style="color:rgb(203, 55, 21);" id="signupResult"></span>
     </form>
   </div>
