add email to signup

--- a/signup.html
+++ b/signup.html
@@ -28,6 +28,12 @@
         <input type="text" class="form-control" id="lastName" name="lastName" aria-describedby="lastName" required>
         <!-- <div id="username" class="form-text"></div> -->
       </div>
+      <!-- Added Email for now, not clear if needed -->
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="text" class="form-control" id="email" name="email" aria-describedby="email" required>
+        <!-- <div id="email" class="form-text"></div> -->
+      </div>
       <div class="mb-3">
         <label for="loginName" class="form-label">Username</label>
         <input type="text" class="form-control" id="username" name="username" aria-describedby="username" required>
