--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
       <div class="mb-3">
         <label for="loginPassword" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" name="password" required>
-        <div id="passwordHelpBlock" class="form-text">
+        <div id="passwordHelpBlock" class="form-text" align="center">
           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
         </div>
       </div>
