--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="css/index.css"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"> 
 </head>
+
+<style>
+  body {
+    background-image: url('assets/background.jpg');
+  }
+</style>
   
 <body>
   <div style="position: absolute; top: 20px; left: 20px;">
