--- a/login.html
+++ b/login.html
@@ -10,6 +10,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
+<!-- <style>
+  body {
+    background-image: url('assets/background.jpg');
+  }
+</style> -->
+
 <body>
   <a href="index.html" class="btn btn-secondary" style="position: absolute; top: 20px; left: 20px;">Back</a>
   <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
