--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-</html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +8,12 @@
   <script type="text/javascript" src="js/code.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+<!-- 
+<style>
+  body {
+    background-image: url('assets/background.jpg');
+  }
+</style> -->
 
 <body>
   <a href="index.html" class="btn btn-secondary" style="position: absolute; top: 20px; left: 20px;">Back</a>
