--- a/login.html
+++ b/login.html
@@ -1,35 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-
-
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Group 7 Login</title>
-  <script type="text/javascript" src="js/code.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <meta charset="utf-8" />
+  <title>Contact Manager</title>
 </head>
-
 <body>
-  <a href="index.html" class="btn btn-secondary" style="position: absolute; top: 20px; left: 20px;">Back</a>
-  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <!-- <h1>Group 7 Contact Book Login</h1> -->
+  <h2>Auth</h2>
 
-    <form id="login" class="w-25 p-3">
-      <!-- <label for id="login" class="form-label">Login</label> -->
-      <div class="mb-3">
-        <label for="loginName" class="form-label">Username</label>
-        <input type="text" class="form-control" id="loginName" name="login" aria-describedby="username" required>
-        <!-- <div id="username" class="form-text"></div> -->
-      </div>
-      <div class="mb-3">
-        <label for="loginPassword" class="form-label">Password</label>
-        <input type="password" class="form-control" id="loginPassword" name="password" required>
-      </div>
-
-      <button type="submit" class="btn btn-primary">Login</button>
-      <span class="text" style="color:rgb(203, 55, 21);" id="loginResult"></span>
-    </form>
+  <div>
+    <input id="login" placeholder="Login">
+    <input id="password" type="password" placeholder="Password">
+    <button id="btnLogin">Login</button>
+    <button id="btnRegister">Register</button>
+    <button id="btnLogout">Logout</button>
+    <pre id="authStatus"></pre>
   </div>
-</body> 
+
+  <hr>
+
+  <h2>Search Contacts (server-side)</h2>
+  <input id="search" placeholder="Search (partial match)">
+  <button id="btnSearch">Search</button>
+  <pre id="searchOut"></pre>
+
+  <script src="public/app.js"></script>
+</body>
 </html>
